User views translated.

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -17,6 +17,7 @@
     "Your account has been created.": "Votre compte a été créé.",
     "You are now registered. Check your email to verify your account.": "Vous êtes maintenant enregistré. Vérifiez votre email pour vérifier votre compte.",
     "You successfully edited your profile.": "Vous avez modifié votre profil avec succès.",
+    "You successfully deleted the user's account.": "Vous avez supprimé le compte de l'utilisateur avec succès.",
     "You successfully deleted your account.": "Vous avez supprimé votre compte avec succès.",
     "You successfully banned the user.": "Vous avez banni l'utilisateur avec succès.",
     "You successfully unbanned the user.": "Vous avez débanni l'utilisateur avec succès.",
@@ -35,5 +36,48 @@
     "Wait the end of your subscription to subscribe again.": "Attendez la fin de votre abonnement pour vous réabonner.",
     "Congrats, you subscribed.": "Félicitations, vous êtes abonné.",
     "You unsubscribed :(.": "Vous vous êtes désabonné :(.",
-    "Very good, you are back. You resumed your subscription.": "Très bien, vous êtes de retour. Vous avez repris votre abonnement."
+    "Very good, you are back. You resumed your subscription.": "Très bien, vous êtes de retour. Vous avez repris votre abonnement.",
+    "Create an account": "Créer un compte",
+    "Log in": "Connexion",
+    "Log out": "Déconnexion",
+    "Username": "Nom d'utilisateur",
+    "Password": "Mot de passe",
+    "Password confirmation": "Confirmation du mot de passe",
+    "By continuing, i aknowledge that i've read and agree to the": "En continuant, j'accepte les",
+    "Privacy Policy": "Conditions d'utilisation",
+    "Privaty Notice": "Politique de confidentialité",
+    "and the": "et les",
+    "of Gourmet's Workshop when creating an account": "de l'Atelier des Gourmets pour la création d'un compte.",
+    "Connection": "Se connecter",
+    "Forgot your password ?": "Mot de passe oublié ?",
+    "Already have an account ?": "Déjà un compte ?",
+    "Not sign up yet ?": "Pas encore inscrit ?",
+    "Manage my subscription": "Gérer mon abonnements",
+    "Subscribe": "S'abonner",
+    "My profile": "Mon profil",
+    "My invoices": "Mes factures",
+    "Resend the verification mail": "Renvoyer le mail de vérification",
+    "My basket": "Mon panier",
+    "You have no product in your basket.": "Vous n'avez aucun produit dans votre panier.",
+    "Payment": "Paiement",
+    "Edit your account": "Modifier votre compte",
+    "Delete your account": "Supprimer votre compte",
+    "Change your password": "Changer votre mot de passe",
+    "Change your username": "Changer votre nom d'utilisateur",
+    "Change your email": "Changer votre email",
+    "Change profile picture": "Changer la photo de profil",
+    "Update": "Mettre à jour",
+    "Are you sure you want to delete your account ?": "Êtes-vous sûr de vouloir supprimer votre compte ?",
+    "Click here": "Cliquez ici",
+    "You have no invoices.": "Vous n'avez aucune factures.",
+    "Price": "Prix",
+    "Role": "Rôle",
+    "Banned": "Banni",
+    "Normal user": "Utilisateur normal",
+    "Ban": "Bannir",
+    "Unban": "Débannir",
+    "Delete": "Supprimer",
+    "Are you sure you wanna ban this account ?": "Êtes-vous sûr de vouloir bannir ce compte ?",
+    "Are you sure you wanna unban this account ?": "Êtes-vous sûr de vouloir débannir ce compte ?",
+    "Are you sure you wanna delete this account ?": "Êtes-vous sûr de vouloir supprimer ce compte ?"
 }
