All of current page translated.

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -28,9 +28,9 @@
     "Payment successful. Invoice available in your profile.": "Paiement effectué avec succès. Facture disponible dans votre profil.",
     "An error occured.": "Une erreur est survenue.",
     "You successfully added the product to your basket.": "Vous avez ajouté le produit à votre panier avec succès.",
-    "Product succesffuly created.": "Produit créé avec succès.",
-    "Product succesffuly updated.": "Produit mis à jour avec succès.",
-    "Product succesffuly deleted.": "Produit supprimé avec succès.",
+    "Product successfully created.": "Produit créé avec succès.",
+    "Product successfully updated.": "Produit mis à jour avec succès.",
+    "Product successfully deleted.": "Produit supprimé avec succès.",
     "Product added to basket.": "Produit ajouté au panier.",
     "Product removed from basket.": "Produit retiré du panier.",
     "Wait the end of your subscription to subscribe again.": "Attendez la fin de votre abonnement pour vous réabonner.",
@@ -79,5 +79,106 @@
     "Delete": "Supprimer",
     "Are you sure you wanna ban this account ?": "Êtes-vous sûr de vouloir bannir ce compte ?",
     "Are you sure you wanna unban this account ?": "Êtes-vous sûr de vouloir débannir ce compte ?",
-    "Are you sure you wanna delete this account ?": "Êtes-vous sûr de vouloir supprimer ce compte ?"
+    "Are you sure you wanna delete this account ?": "Êtes-vous sûr de vouloir supprimer ce compte ?",
+    "Address": "Adresse",
+    "Postal code": "Code postal",
+    "City": "Ville",
+    "Command overview": "Récapitulatif de la commande",
+    "Basket - Payment": "Panier - Paiement",
+    "Shippment": "Livraison",
+    "Process Payment": "Procéder au paiement",
+    "Quantity": "Quantité",
+    "Select a brand": "Sélectionnez une marque",
+    "Sort by": "Trier par",
+    "Filter": "Filtrer",
+    "Newest": "Plus récent",
+    "Popularity": "Popularité",
+    "Ascending price": "Prix croissant",
+    "Descending price": "Prix décroissant",
+    "Home": "Accueil",
+    "Courses": "Cours",
+    "Events": "Événements",
+    "Store": "Boutique",
+    "Workshops": "Ateliers",
+    "Users list": "Liste des utilisateurs",
+    "Add a product": "Ajouter un produit",
+    "Add a brand": "Ajouter une marque",
+    "Add an event": "Ajouter un événement",
+    "Add a workshop": "Ajouter un atelier",
+    "Add a course": "Ajouter un cours",
+    "Products list": "Liste des produits",
+    "Brands list": "Liste des marques",
+    "Events list": "Liste des événements",
+    "Workshops list": "Liste des ateliers",
+    "Courses list": "Liste des cours",
+    "Subscription": "Abonnement",
+    "Subscribe to": "Abonnez vous à",
+    "My subscription": "Mon abonnement",
+    "Subscription date": "Date d'abonnement",
+    "End of subscription": "Fin de l'abonnement",
+    "Recurring period": "Période de récurrence",
+    "Subscription price": "Prix de l'abonnement",
+    "Next paiement": "Prochain paiement",
+    "Resume my subscription": "Reprendre mon abonnement",
+    "Cancel my subscription": "Annuler mon abonnement",
+    "Choose the recurring period": "Choisissez la période de récurrence",
+    "Monthly": "Mensuel",
+    "Yearly": "Annuel",
+    "You can always change when the subscription ends.": "Vous pouvez toujours changer quand l'abonnement se termine.",
+    "By paying, you give up on your right of withdrawal. You can cancel your subscription at any time": "En payant, vous renoncez à votre droit de rétractation. Vous pouvez annuler votre abonnement à tout moment",
+    "No pubs": "Aucune pubs",
+    "Comment / Leave a review": "Commenter / Laisser un avis",
+    "Tchat with a Chef": "Tchat avec un Chef",
+    "5% off on all products": "5% de réduction sur tous les produits",
+    "Access to 5 courses per day": "Accès à 5 cours par jour",
+    "Illimited access to courses": "Accès illimité aux cours",
+    "Free shipping in drop-off point": "Livraison gratuite en point relais",
+    "Free shipping anywhere": "Livraison gratuite partout",
+    "5€ for every 3 people subscribed with your link": "5€ tous les 3 personnes abonnées avec votre lien",
+    "5€ for every people subscribed with your link": "5€ tous les 3 personnes abonnées avec votre lien",
+    "3% on new user's first command": "3% sur la première commande des nouveaux utilisateurs",
+    "10% on yearly plan": "10% sur l'abonnement annuel",
+    "By clicking below, you are gonna cancel your subscription.": "En cliquant ci-dessous, vous allez annuler votre abonnement.",
+    "Subscribe now !": "Abonnez vous !",
+    "And get a lot of advantages !": "Et obtenez beaucoup d'avantages !",
+    "Advantages": "Avantages",
+    "Free": "Gratuit",
+    "day": "jour",
+    "No limits": "Aucune limite",
+    "Drop-off point only": "Point relais uniquement",
+    "Rent a kitchen space": "Louer un espace cuisine",
+    "Invitation to exclusive events": "Invitation aux événements exclusifs",
+    "Cooptation new subscriber": "Cooptation de nouveaux abonnés",
+    "(outside of Free tier)": "(hors de la formule gratuite)",
+    "3% on his first order": "3% sur sa première commande",
+    "Renew bonus": "Bonus de renouvellement",
+    "Access to courses": "Accès aux cours",
+    "Free shipping": "Livraison gratuite",
+    "Product name": "Nom du produit",
+    "Product description": "Description du produit",
+    "9.99 - Product price": "Prix du produit",
+    "Product image": "Image du produit",
+    "Actual image": "Image actuelle",
+    "Choose the product brand": "Choisissez la marque du produit",
+    "Add the product": "Ajouter le produit",
+    "Modify a product": "Modifier un produit",
+    "Modify": "Modifier",
+    "Buy": "Acheter",
+    "Same brand products": "Produits de la même marque",
+    "Brand name": "Nom de la marque",
+    "Brand description": "Description de la marque",
+    "Brand image": "Image de la marque",
+    "Modify the brand": "Modifier la marque",
+    "Brand website": "Site web de la marque",
+    "Brand email": "Email de la marque",
+    "Brand's products": "Produits de la marque",
+    "Modify a brand": "Modifier une marque",
+    "Name": "Nom",
+    "Are you sure you wanna delete this brand ?": "Êtes-vous sûr de vouloir supprimer cette marque ?",
+    "Delete the brand": "Supprimer la marque",
+    "Search ...": "Rechercher ...",
+    "Brand": "Marque",
+    "Are you sure you wanna delete this product ?": "Êtes-vous sûr de vouloir supprimer ce produit ?",
+    "Delete the product": "Supprimer le produit",
+    "Legal notice": "Mentions légales"
 }
