Added translation for Korean and Spanish.

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -180,5 +180,7 @@
     "Brand": "Marque",
     "Are you sure you wanna delete this product ?": "Êtes-vous sûr de vouloir supprimer ce produit ?",
     "Delete the product": "Supprimer le produit",
-    "Legal notice": "Mentions légales"
+    "Legal notice": "Mentions légales",
+    "Modify my profile": "Modifier mon profil",
+    "Email": "Email"
 }
