Added option to switch language.

--- a/lang/es.json
+++ b/lang/es.json
@@ -182,5 +182,6 @@
     "Delete the product": "Eliminar el producto",
     "Legal notice": "Aviso legal",
     "Modify my profile": "Modificar mi perfil",
-    "Email": "Correo electrónico"
+    "Email": "Correo electrónico",
+    "You successfully changed the language.": "Has cambiado el idioma con éxito."
 }
