--- a/lang/fr.json
+++ b/lang/fr.json
@@ -182,5 +182,6 @@
     "Delete the product": "Supprimer le produit",
     "Legal notice": "Mentions légales",
     "Modify my profile": "Modifier mon profil",
-    "Email": "Email"
+    "Email": "Email",
+    "You successfully changed the language.": "Vous avez changé la langue avec succès."
 }
