--- a/lang/kr.json
+++ b/lang/kr.json
@@ -182,5 +182,6 @@
     "Delete the product": "제품 삭제",
     "Legal notice": "법적 고지",
     "Modify my profile": "내 프로필 수정",
-    "Email": "이메일"
+    "Email": "이메일",
+    "You successfully changed the language.": "언어를 성공적으로 변경했습니다."
 }
