Fixed some translate.

--- a/lang/es.json
+++ b/lang/es.json
@@ -183,5 +183,9 @@
     "Legal notice": "Aviso legal",
     "Modify my profile": "Modificar mi perfil",
     "Email": "Correo electrónico",
-    "You successfully changed the language.": "Has cambiado el idioma con éxito."
+    "You successfully changed the language.": "Has cambiado el idioma con éxito.",
+    "Unit price": "Precio unitario",
+    "Total": "Total",
+    "Actions": "Acciones",
+    "Image": "Imagen"
 }
