--- a/lang/fr.json
+++ b/lang/fr.json
@@ -183,5 +183,9 @@
     "Legal notice": "Mentions légales",
     "Modify my profile": "Modifier mon profil",
     "Email": "Email",
-    "You successfully changed the language.": "Vous avez changé la langue avec succès."
+    "You successfully changed the language.": "Vous avez changé la langue avec succès.",
+    "Unit price": "Prix unitaire",
+    "Total": "Total",
+    "Actions": "Actions",
+    "Image": "Image"
 }
