--- a/lang/kr.json
+++ b/lang/kr.json
@@ -183,5 +183,9 @@
     "Legal notice": "법적 고지",
     "Modify my profile": "내 프로필 수정",
     "Email": "이메일",
-    "You successfully changed the language.": "언어를 성공적으로 변경했습니다."
+    "You successfully changed the language.": "언어를 성공적으로 변경했습니다.",
+    "Unit price": "단가",
+    "Total": "합계",
+    "Actions": "작업",
+    "Image": "이미지"
 }
