--- a/lang/es.json
+++ b/lang/es.json
@@ -45,7 +45,7 @@
     "Password confirmation": "Confirmación de contraseña",
     "By continuing, i aknowledge that i've read and agree to the": "Al continuar, reconozco que he leído y acepto los",
     "Privacy Policy": "Política de privacidad",
-    "Privaty Notice": "Aviso de privacidad",
+    "Privacy Notice": "Aviso de privacidad",
     "and the": "y los",
     "of Gourmet's Workshop when creating an account": "del Atelier des Gourmets al crear una cuenta.",
     "Connection": "Conexión",
