--- a/lang/fr.json
+++ b/lang/fr.json
@@ -45,7 +45,7 @@
     "Password confirmation": "Confirmation du mot de passe",
     "By continuing, i aknowledge that i've read and agree to the": "En continuant, j'accepte les",
     "Privacy Policy": "Conditions d'utilisation",
-    "Privaty Notice": "Politique de confidentialité",
+    "Privacy Notice": "Politique de confidentialité",
     "and the": "et les",
     "of Gourmet's Workshop when creating an account": "de l'Atelier des Gourmets pour la création d'un compte.",
     "Connection": "Se connecter",
