--- a/lang/kr.json
+++ b/lang/kr.json
@@ -45,7 +45,7 @@
     "Password confirmation": "비밀번호 확인",
     "By continuing, i aknowledge that i've read and agree to the": "계속 진행함으로써, 다음 사항에 동의하는 것입니다.",
     "Privacy Policy": "개인정보 처리방침",
-    "Privaty Notice": "개인정보 공지사항",
+    "Privacy Notice": "개인정보 공지사항",
     "and the": "그리고",
     "of Gourmet's Workshop when creating an account": "계정을 만들 때 고메 워크숍의",
     "Connection": "연결",
