Added more translations + fixed some Dockerfile issues.

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,4 +1,18 @@
 {
+    "The :attribute must be a valid role.": "Ce champ doit être un rôle valide.",
+    "The :attribute must be at least :length characters and contain at least one number.": "Ce champ doit avoir au moins :length caractères et contenir au moins un chiffre.",
+    "The :attribute must be at least :length characters and contain at least one special character and one number.": "Ce champ doit avoir au moins :length caractères et contenir au moins un caractère spécial et un nombre.",
+    "The :attribute must be at least :length characters and contain at least one special character.": "Ce champ doit avoir au moins :length caractères et contenir au moins un caractère spécial.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one number.": "Ce champ doit avoir au moins :length caractères et contenir au moins une majuscule et un chiffre.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character and one special character.": "Ce champ doit avoir au moins :length caractères et contenir au moins une majuscule et un caractère spécial.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character, one number, and one special character.": "Ce champ doit avoir au moins :length caractères, et contenir au moins une majuscule, un chiffre et un caractère spécial.",
+    "The :attribute must be at least :length characters and contain at least one uppercase character.": "Ce champ doit avoir au moins :length caractères et au moins une majuscule.",
+    "The :attribute must be at least :length characters.": "Ce champ doit avoir au moins :length caractères.",
+    "The :attribute must contain at least one letter.": "Ce champ doit avoir au moins une lettre.",
+    "The :attribute must contain at least one number.": "Ce champ doit avoir au moins un numéro.",
+    "The :attribute must contain at least one symbol.": "Ce champ doit avoir au moins un symbole.",
+    "The :attribute must contain at least one uppercase and one lowercase letter.": "Ce champ doit avoir au moins une lettre majuscule et une lettre minuscule.",
+    "The given :attribute has appeared in a data leak. Please choose a different :attribute.": "La valeur du champ est apparue dans une fuite de données. Veuillez choisir une valeur différente.",
     "These credentials do not match our records.": "Les informations de connexion ne correspondent pas.",
     "The provided password is incorrect.": "Le mot de passe fourni est incorrect.",
     "Too many login attempts. Please try again in :seconds seconds.": "Trop de tentatives de connexion. Veuillez réessayer dans :seconds secondes.",
