Front event.show

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -12,6 +12,8 @@
     "Image": "Image",
     "All rooms": "Toutes les salles",
     "Add room": "Ajouter une salle",
+    "Informations about the event": "Informations sur l'événement",
+    "Participants": "Participants",
     "address": "addresse",
     "Equipments": "Equipements",
     "Edit equipments": "Modifier les équipements",
