Added discount if user is subscribed.

--- a/lang/es.json
+++ b/lang/es.json
@@ -187,5 +187,6 @@
     "Unit price": "Precio unitario",
     "Total": "Total",
     "Actions": "Acciones",
-    "Image": "Imagen"
+    "Image": "Imagen",
+    "Your card was declined.": "Tu tarjeta fue rechazada."
 }
