--- a/lang/fr.json
+++ b/lang/fr.json
@@ -201,5 +201,6 @@
     "Unit price": "Prix unitaire",
     "Total": "Total",
     "Actions": "Actions",
-    "Image": "Image"
+    "Image": "Image",
+    "Your card was declined.": "Votre carte a été refusée."
 }
