--- a/lang/kr.json
+++ b/lang/kr.json
@@ -187,5 +187,6 @@
     "Unit price": "단가",
     "Total": "합계",
     "Actions": "작업",
-    "Image": "이미지"
+    "Image": "이미지",
+    "Your card was declined.": "카드 결제가 거부되었습니다."
 }
