Delete equipment.show & equipment.index

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -9,6 +9,7 @@
     "Choose a file": "Choisir un fichier",
     "No file selected": "Pas de fichier séctionné",
     "Add equipment": "Ajouter l'équipement",
+    "See all rooms": "Voir toutes les salles",
     "Image": "Image",
     "All rooms": "Toutes les salles",
     "Add room": "Ajouter une salle",
