Room_id Session

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -11,6 +11,7 @@
     "Add equipment": "Ajouter l'équipement",
     "See all rooms": "Voir toutes les salles",
     "Image": "Image",
+    "Error with the room creation": "Erreur avec la création de la salle",
     "All rooms": "Toutes les salles",
     "Add room": "Ajouter une salle",
     "Informations about the event": "Informations sur l'événement",
