--- a/lang/es.json
+++ b/lang/es.json
@@ -188,5 +188,78 @@
     "Total": "Total",
     "Actions": "Acciones",
     "Image": "Imagen",
-    "Your card was declined.": "Tu tarjeta fue rechazada."
+    "Your card was declined.": "Tu tarjeta fue rechazada.",
+    "All equipment": "Todos los equipos",
+    "delete": "eliminar",
+    "edit": "editar",
+    "Add an equipment": "Agregar un equipo",
+    "Enter the name of the equipment": "Ingrese el nombre del equipo",
+    "Enter the description of the equipment": "Ingrese la descripción del equipo",
+    "Enter the brand of the equipment": "Ingrese la marca del equipo",
+    "Choose a file": "Elegir un archivo",
+    "No file selected": "Ningún archivo seleccionado",
+    "Add equipment": "Agregar equipo",
+    "See all rooms": "Ver todas las salas",
+    "Error with the room creation": "Error en la creación de la sala",
+    "Room list": "Lista de salas",
+    "Add room": "Agregar una sala",
+    "Informations about the event": "Información sobre el evento",
+    "Participants": "Participantes",
+    "address": "dirección",
+    "Equipments": "Equipos",
+    "Equipment list": "Lista de equipos",
+    "Edit equipments": "Editar equipos",
+    "Enter the name of the room": "Ingrese el nombre de la sala",
+    "Enter the address of the room": "Ingrese la dirección de la sala",
+    "Next": "Siguiente",
+    "Connect an equipment": "Conectar un equipo",
+    "Select": "Seleccionar",
+    "Other events": "Otros eventos",
+    "Event": "Evento",
+    "See all": "Ver todo",
+    "Unsubscribe": "Cancelar suscripción",
+    "This event is full": "Este evento está completo",
+    "Discover": "Descubrir",
+    "Rooms": "Salas",
+    "Date": "Fecha",
+    "Schedule": "Horario",
+    "capacity": "capacidad",
+    "Organizer": "Organizador",
+    "Place": "Lugar",
+    "Edit an event": "Editar un evento",
+    "Edit event": "Editar evento",
+    "Enter the name of the event": "Ingrese el nombre del evento",
+    "Choose the room": "Elegir la sala",
+    "Choose the organizer": "Elegir el organizador",
+    "Description": "Descripción",
+    "Capacity": "Capacidad",
+    "Choose the start time": "Elegir la hora de inicio",
+    "Choose the end time": "Elegir la hora de finalización",
+    "Add event": "Agregar evento",
+    "Event image": "Imagen del evento",
+    "Edit room": "Editar sala",
+    "Edit equipment": "Editar",
+    "Current image": "Imagen actual",
+    "Validate selection": "Validar selección",
+    "You have connect an equipment to this room": "Ha conectado un equipo a esta sala",
+    "The selection of equipment has been successfully registered": "La selección de equipos se ha registrado correctamente",
+    "You have created an equipment": "Ha creado un equipo",
+    "You have edited an equipment": "Ha editado un equipo",
+    "You have deleted an equipment": "Ha eliminado un equipo",
+    "You have created an event": "Ha creado un evento",
+    "You have edited an event": "Ha editado un evento",
+    "You have deleted an event": "Ha eliminado un evento",
+    "You have to be connected to subscribe to an event": "Debe estar conectado para suscribirse a un evento",
+    "You are already subscribed to this event": "Ya está suscrito a este evento",
+    "You have subscribed to the event": "Se ha suscrito al evento",
+    "You have to be connected to unsubscribe to an event": "Debe estar conectado para cancelar la suscripción a un evento",
+    "You have unsubscribed to the event": "Se ha cancelado la suscripción al evento",
+    "You have created a room": "Ha creado una sala",
+    "You have edited a room": "Ha editado una sala",
+    "You have deleted a room": "Ha eliminado una sala",
+    "List of available rooms": "Lista de salas disponibles",
+    "List of available events": "Lista de eventos disponibles",
+    "Title": "Título",
+    "Room": "Sala",
+    "Created by": "Creado por"
 }
