--- a/lang/kr.json
+++ b/lang/kr.json
@@ -188,5 +188,78 @@
     "Total": "합계",
     "Actions": "작업",
     "Image": "이미지",
-    "Your card was declined.": "카드 결제가 거부되었습니다."
+    "Your card was declined.": "카드 결제가 거부되었습니다.",
+    "All equipment": "모든 장비",
+    "delete": "삭제",
+    "edit": "편집",
+    "Add an equipment": "장비 추가",
+    "Enter the name of the equipment": "장비 이름을 입력하세요",
+    "Enter the description of the equipment": "장비 설명을 입력하세요",
+    "Enter the brand of the equipment": "장비 브랜드를 입력하세요",
+    "Choose a file": "파일 선택",
+    "No file selected": "선택된 파일 없음",
+    "Add equipment": "장비 추가",
+    "See all rooms": "모든 방 보기",
+    "Error with the room creation": "방 생성 오류",
+    "Room list": "방 목록",
+    "Add room": "방 추가",
+    "Informations about the event": "이벤트 정보",
+    "Participants": "참가자",
+    "address": "주소",
+    "Equipments": "장비",
+    "Equipment list": "장비 목록",
+    "Edit equipments": "장비 편집",
+    "Enter the name of the room": "방 이름을 입력하세요",
+    "Enter the address of the room": "방 주소를 입력하세요",
+    "Next": "다음",
+    "Connect an equipment": "장비 연결",
+    "Select": "선택",
+    "Other events": "다른 이벤트",
+    "Event": "이벤트",
+    "See all": "모두 보기",
+    "Unsubscribe": "구독 취소",
+    "This event is full": "이 이벤트는 가득 찼습니다",
+    "Discover": "발견하기",
+    "Rooms": "방",
+    "Date": "날짜",
+    "Schedule": "일정",
+    "capacity": "수용인원",
+    "Organizer": "주최자",
+    "Place": "장소",
+    "Edit an event": "이벤트 편집",
+    "Edit event": "이벤트 편집",
+    "Enter the name of the event": "이벤트 이름을 입력하세요",
+    "Choose the room": "방 선택",
+    "Choose the organizer": "주최자 선택",
+    "Description": "설명",
+    "Capacity": "수용인원",
+    "Choose the start time": "시작 시간 선택",
+    "Choose the end time": "종료 시간 선택",
+    "Add event": "이벤트 추가",
+    "Event image": "이벤트 이미지",
+    "Edit room": "방 편집",
+    "Edit equipment": "장비 편집",
+    "Current image": "현재 이미지",
+    "Validate selection": "선택 유효화",
+    "You have connect an equipment to this room": "이 방에 장비를 연결했습니다",
+    "The selection of equipment has been successfully registered": "장비 선택이 성공적으로 등록되었습니다",
+    "You have created an equipment": "장비를 생성했습니다",
+    "You have edited an equipment": "장비를 편집했습니다",
+    "You have deleted an equipment": "장비를 삭제했습니다",
+    "You have created an event": "이벤트를 생성했습니다",
+    "You have edited an event": "이벤트를 편집했습니다",
+    "You have deleted an event": "이벤트를 삭제했습니다",
+    "You have to be connected to subscribe to an event": "이벤트에 구독하려면 연결해야 합니다",
+    "You are already subscribed to this event": "이미 이 이벤트에 구독하셨습니다",
+    "You have subscribed to the event": "이벤트에 구독했습니다",
+    "You have to be connected to unsubscribe to an event": "이벤트 구독을 취소하려면 연결해야 합니다",
+    "You have unsubscribed to the event": "이벤트 구독을 취소했습니다",
+    "You have created a room": "방을 생성했습니다",
+    "You have edited a room": "방을 편집했습니다",
+    "You have deleted a room": "방을 삭제했습니다",
+    "List of available rooms": "사용 가능한 방 목록",
+    "List of available events": "사용 가능한 이벤트 목록",
+    "Title": "제목",
+    "Room": "방",
+    "Created by": "생성자"
 }
