--- a/lang/fr.json
+++ b/lang/fr.json
@@ -273,5 +273,11 @@
     "You have deleted a room": "Vous avez supprimé une salle",
     "List of available rooms": "Liste des salles disponibles",
     "List of available events": "Liste des événements disponibles",
-    "Title": "Titre"
+    "Title": "Titre",
+    "Promote": "Promouvoir",
+    "Demote": "Rétrograder",
+    "You successfully promoted the user.": "Vous avez promu l'utilisateur avec succès.",
+    "You successfully demoted the user.": "Vous avez rétrogradé l'utilisateur avec succès.",
+    "Are you sure you wanna promote this account ?": "Êtes-vous sûr de vouloir promouvoir ce compte ?",
+    "Are you sure you wanna demote this account ?": "Êtes-vous sûr de vouloir rétrograder ce compte ?"
 }
