--- a/lang/es.json
+++ b/lang/es.json
@@ -261,5 +261,10 @@
     "List of available events": "Lista de eventos disponibles",
     "Title": "Título",
     "Room": "Sala",
-    "Created by": "Creado por"
+    "Created by": "Creado por",
+    "Pubs": "Pubs",
+    "Starter": "Entrante",
+    "Pro": "Pro",
+    "by month": "por mes",
+    "by year": "por año"
 }
