Godfather key correctly increment.

--- a/lang/es.json
+++ b/lang/es.json
@@ -15,7 +15,7 @@
     "Check your email for the confirmation link.": "Verifique su correo electrónico para el enlace de confirmación.",
     "You have verified your email.": "Has verificado tu correo electrónico.",
     "Your account has been created.": "Su cuenta ha sido creada.",
-    "You are now registered. Check your email to verify your account.": "Ahora estás registrado. Verifique su correo electrónico para verificar su cuenta.",
+    "Check your email to verify your account.": "Ahora estás registrado. Verifique su correo electrónico para verificar su cuenta.",
     "You successfully edited your profile.": "Ha editado su perfil con éxito.",
     "You successfully deleted the user's account.": "Ha eliminado la cuenta del usuario con éxito.",
     "You successfully deleted your account.": "Ha eliminado su cuenta con éxito.",
