--- a/lang/fr.json
+++ b/lang/fr.json
@@ -29,7 +29,7 @@
     "Check your email for the confirmation link.": "Vérifiez votre email pour le lien de confirmation.",
     "You have verified your email.": "Vous avez vérifié votre email.",
     "Your account has been created.": "Votre compte a été créé.",
-    "You are now registered. Check your email to verify your account.": "Vous êtes maintenant enregistré. Vérifiez votre email pour vérifier votre compte.",
+    "Check your email to verify your account.": "Vous êtes maintenant enregistré. Vérifiez votre email pour vérifier votre compte.",
     "You successfully edited your profile.": "Vous avez modifié votre profil avec succès.",
     "You successfully deleted the user's account.": "Vous avez supprimé le compte de l'utilisateur avec succès.",
     "You successfully deleted your account.": "Vous avez supprimé votre compte avec succès.",
