--- a/lang/kr.json
+++ b/lang/kr.json
@@ -15,7 +15,7 @@
     "Check your email for the confirmation link.": "확인 링크를 위해 이메일을 확인하십시오.",
     "You have verified your email.": "이메일이 인증되었습니다.",
     "Your account has been created.": "계정이 생성되었습니다.",
-    "You are now registered. Check your email to verify your account.": "이제 등록되었습니다. 계정을 인증하려면 이메일을 확인하십시오.",
+    "Check your email to verify your account.": "이제 등록되었습니다. 계정을 인증하려면 이메일을 확인하십시오.",
     "You successfully edited your profile.": "프로필을 성공적으로 편집하였습니다.",
     "You successfully deleted the user's account.": "사용자 계정을 성공적으로 삭제하였습니다.",
     "You successfully deleted your account.": "계정을 성공적으로 삭제하였습니다.",
