Add some translations.

--- a/lang/es.json
+++ b/lang/es.json
@@ -292,5 +292,16 @@
     "Choose the course's difficulty": "Elige la dificultad del curso",
     "Edit a course": "Editar un curso",
     "Are you sure you wanna delete this course ?": "¿Estás seguro/a de que quieres eliminar este curso?",
-    "Delete the course": "Eliminar el curso"
+    "Delete the course": "Eliminar el curso",
+    "Godfather's key": "Clave del padrino",
+    "Share this key in order to get some discount on the shop !": "¡Comparte esta clave para obtener descuentos en la tienda!",
+    "Thanks to you": "Gracias a ti",
+    "people subscribed": "personas se han suscrito",
+    "Thanks to your godchildrens, you earned a bonus of:": "Gracias a tus ahijados, has ganado un bono de:",
+    "Total discount": "Descuento total",
+    "wallet": "billetera",
+    "subscription": "suscripción",
+    "Price with discount": "Precio con descuento",
+    "Events planning": "Planificación de eventos",
+    "Open event calendar": "Abrir calendario de eventos"
 }
