--- a/lang/fr.json
+++ b/lang/fr.json
@@ -305,5 +305,16 @@
     "Edit a course": "Modifier un cours",
     "Are you sure you wanna delete this course ?": "Êtes-vous sûr de vouloir supprimer ce cours ?",
     "Delete the course": "Supprimer le cours",
-    "Created by": "Créé par"
+    "Created by": "Créé par",
+    "Godfather's key": "Clé de parrainage",
+    "Share this key in order to get some discount on the shop !": "Partagez cette clé afin d'obtenir des réductions sur la boutique !",
+    "Thanks to you": "Grâce à vous",
+    "people subscribed": "personnes se sont inscrites",
+    "Thanks to your godchildrens, you earned a bonus of:": "Grâce à vos filleuls, vous avez gagné un bonus de:",
+    "Total discount": "Réduction totale",
+    "wallet": "portefeuille",
+    "subscription": "abonnement",
+    "Price with discount": "Prix avec réduction",
+    "Events planning": "Planning des événements",
+    "Open event calendar": "Ouvrir le calendrier des événements"
 }
