--- a/lang/kr.json
+++ b/lang/kr.json
@@ -292,5 +292,16 @@
     "Choose the course's difficulty": "강좌의 난이도 선택",
     "Edit a course": "강좌 수정",
     "Are you sure you wanna delete this course ?": "이 강좌를 삭제하시겠습니까?",
-    "Delete the course": "강좌 삭제"
+    "Delete the course": "강좌 삭제",
+    "Godfather's key": "대부의 열쇠",
+    "Share this key in order to get some discount on the shop !": "상점에서 할인을 받으려면 이 열쇠를 공유하세요!",
+    "Thanks to you": "당신 덕분에",
+    "people subscribed": "명의 사람들이 가입했습니다",
+    "Thanks to your godchildrens, you earned a bonus of:": "귀하의 후견인들 덕분에, 보너스를 획득하셨습니다:",
+    "Total discount": "총 할인",
+    "wallet": "지갑",
+    "subscription": "구독",
+    "Price with discount": "할인 가격",
+    "Events planning": "이벤트 계획",
+    "Open event calendar": "이벤트 달력 열기"
 }
